# SunnyDays

./: .gitignore  BassDrum.cpp  CMakeLists.txt  Chord.cpp  LyricController.cpp  LyricController.h  MIDIHelper.cpp  MIDIHelper.h  MainLine.cpp  MainLine.h  README.md  Voice.cpp  Voice.h  main.cpp
include/: Accompany.h  BassDrum.h  Chord.h  MIDIHelper.h
src/: main.cpp
src/helper/: LyricController.cpp  MIDIHelper.cpp
src/instrument/: Accompany.cpp  BassDrum.cpp  Chord.cpp  Voice.cpp
